foldseek with lora - not better than rand. chance

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,20 @@ __pycache__
 /tmp
 .vscode
 .ipynb_checkpoints
+
+lora_3di_adapter/
+lora_3di_batchtest/
+lora_3di_full_clean/
+lora_3di_sanity/
+lora_adapter_cath/
+lora_diag_2e5/
+lora_sanity/
+wandb/
+oldresults/
+llama_results.json
+llama_results_paper_aligned.json
+llm_results.json
+lora.py
+pifold_results.json
+reproduce_cath_llama.py
+run_benchmark.sh
